[package]
name = "annepro2_tools"
version = "0.1.1"
authors = ["codetector <codetector@codetector.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "2.4.1", default-features = false, features = ["linux-static-libusb"]}
pretty-hex = "0.3.0"
structopt = "0.3.26"
